# pymonkey

./: .env  .pre-commit-config.yaml  pyproject.toml  pyrightconfig.json  test.mnk
src/: ast.py  lexer.py  main.py  parser.py  token.py
src/pymonkey/: __init__.py  __main__.py  ast.py  lexer.py  parser.py
tests/: test_lexer.py  test_parser.py
